<resources>
    <string name="app_name">buy</string>
    <string name="selectAll">全选</string>
    <string name="sum">合计:</string>
    <string name="pay">去结算</string>
    <string name="save">收藏</string>
    <string name="delete">删除</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="productName">产品名字</string>
    <string name="productPrice">产品价格</string>
    <string name="shopcar">购物车</string>
    <string name="zhifubao">支付宝</string>
    <string name="zhifu">支付</string>
    <string name="order_info">订单详情</string>
    <string name="shopcar_connect_failed">网络连接失败,购物车数据无法获取</string>
</resources>
