<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="60dp">


    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/normalLayout"
    android:visibility="visible">
    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="@dimen/tool_bar_left_right_margin_size"
    android:layout_centerVertical="true"
    android:id="@+id/allSelect"
    android:text="@string/selectAll"/>

    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
    android:textSize="@dimen/shop_car_text_size"
    android:text="@string/sum"
    android:gravity="center"
    android:layout_marginLeft="@dimen/tool_bar_left_right_margin_size"
    android:layout_toRightOf="@id/allSelect"
    android:id="@+id/sumNote"/>

    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
              android:textSize="@dimen/shop_car_text_size"
              android:gravity="center"
              android:layout_marginLeft="@dimen/tool_bar_left_right_margin_size"
              android:layout_toRightOf="@id/sumNote"
              android:id="@+id/sumValue"
    android:textColor="@android:color/holo_red_dark"/>

    <Button android:layout_width="wrap_content" android:layout_height="match_parent"
    android:text="@string/pay"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:id="@+id/payBtn"
    android:background="@android:color/holo_red_dark"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:id="@+id/editLayout"
    android:visibility="gone">
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_marginLeft="@dimen/tool_bar_left_right_margin_size"
                  android:layout_centerVertical="true"
                  android:id="@+id/allEditSelect"
                  android:text="@string/selectAll"/>



        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/save"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:id="@+id/saveBtn"
                android:background="@android:color/holo_red_dark"/>

        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/delete"
                android:textColor="@android:color/black"
                android:id="@+id/deleteBtn"
                android:background="@android:color/white"
        android:layout_toLeftOf="@id/saveBtn"/>

    </RelativeLayout>



</RelativeLayout>